# hundred-bagger

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION.md  PRD.md  README.md  pyproject.toml
.claude/skills/hunt-moat/: SKILL.md
.claude/skills/hunt-monitor/: SKILL.md
.claude/skills/hunt-roic/: SKILL.md
.claude/skills/hunt-score/: SKILL.md
.claude/skills/hunt-signals/: SKILL.md
.claude/skills/hunt-status/: SKILL.md
.claude/skills/hunt-universe/: SKILL.md
docs/: architecture.md  data-sources.md  first-principles.md  portfolio.md  schema.md  scoring.md
src/: app.py  config.py  db.py  filings.py  fundamentals.py  metric_help.py  moat.py  monitor.py  portfolio.py  roic.py  schema.sql  scorer.py  signals.py  triggers.py  universe.py  xbrl.py
src/pages/: 1_Pipeline.py  2_Watchlist.py  3_Stock_Detail.py  4_Alerts.py  5_Portfolio.py
tests/: conftest.py  test_db.py  test_moat.py  test_monitor.py  test_no_llm.py  test_portfolio.py  test_roic.py  test_scorer.py  test_signals.py  test_universe.py
