[project]
name = "hundred-bagger"
version = "0.1.0"
description = "Human-driven 100-bagger stock screening funnel. Claude Code is the reasoning engine; Python only fetches, computes, and persists."
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "duckdb>=0.10",
    "edgartools>=2.20",
    "pandas>=2.0",
    "plotly>=5.20",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "streamlit>=1.35",
    "yfinance>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
